test/testdata/classes/blank_field_access_error.lox
class Foo {}
var foo = Foo();
foo._; // error: _ cannot be used as a field name
